--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,19 +33,22 @@ dependencies:
   provider: ^6.0.2
   carousel_slider: ^4.0.0
   is_first_run: ^1.0.0
-  simple_animations: ^4.0.1
-  page_transition: ^2.0.5
+  simple_animations: ^4.0.2
   go_router: ^3.0.6
   firebase_auth: ^3.3.12
   firebase_core: ^1.14.0
   cloud_firestore: ^3.1.11
   fl_chart: ^0.50.5
+  cloud_firestore_odm: ^1.0.0-dev.11
+  json_annotation: ^4.4.0
+  http: ^0.13.4
+  url_launcher: ^6.1.2
+  shimmer: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  cloud_firestore_odm: ^1.0.0-dev.11
-  json_annotation: ^4.4.0
+
 
 dev_dependencies:
   flutter_test:
@@ -73,9 +76,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - images/stock1.jpg
+     - images/phonewithstock1.png
+     - images/phonewithstock2.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
