--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,8 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   provider: ^6.0.2
   carousel_slider: ^4.0.0
-  is_first_run: ^1.0.0
   simple_animations: ^4.0.2
-  go_router: ^3.0.6
+  go_router: 5.1.1
   firebase_auth: ^3.3.12
   firebase_core: ^1.14.0
   cloud_firestore: ^3.1.11
@@ -45,6 +44,9 @@ dependencies:
   url_launcher: ^6.1.2
   shimmer: ^2.0.0
   extended_image: ^6.2.1
+  flutter_native_splash: ^2.2.0+1
+  shared_preferences: ^2.0.15
+  after_layout: ^1.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -78,9 +80,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - images/stock1.jpg
      - images/phonewithstock1.png
      - images/phonewithstock2.png
+     - images/phonewithstock3.png
+     - images/phonewithstock4.png
+     - images/main.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
