--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:421680960621:ios:9dd7b493295ac0ff44db64",
-  "FIREBASE_PROJECT_ID": "capstone-f748a",
-  "GCM_SENDER_ID": "421680960621"
+  "GOOGLE_APP_ID": "1:311739712375:ios:d12c28bba0ffb13acdd772",
+  "FIREBASE_PROJECT_ID": "capstone-63854",
+  "GCM_SENDER_ID": "311739712375"
 }
