--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,13 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   provider: ^6.0.2
   carousel_slider: ^4.0.0
-  simple_animations: ^4.0.2
-  go_router: 5.1.1
-  firebase_auth: ^3.3.12
-  firebase_core: ^1.14.0
-  cloud_firestore: ^3.1.11
-  fl_chart: ^0.50.5
-  cloud_firestore_odm: ^1.0.0-dev.11
+  simple_animations: ^5.0.0+2
+  go_router: ^5.1.3
+  cloud_firestore: ^4.0.4
+  cloud_firestore_odm: ^1.0.0-dev.39
+  firebase_storage: ^11.0.4
+  image_cropper: ^3.0.1
+  fl_chart: ^0.55.2
   json_annotation: ^4.4.0
   http: ^0.13.4
   url_launcher: ^6.1.2
@@ -47,10 +47,14 @@ dependencies:
   flutter_native_splash: ^2.2.0+1
   shared_preferences: ^2.0.15
   after_layout: ^1.2.0
+  image_picker: ^0.8.6
+  intl: ^0.17.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.1.1
+  firebase_auth: ^4.1.1
 
 
 dev_dependencies:
@@ -62,7 +66,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
   build_runner: ^2.1.8
   cloud_firestore_odm_generator: ^1.0.0-dev.11
   json_serializable: ^6.1.5
