--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
   go_router: ^5.1.3
   cloud_firestore: ^4.0.4
   cloud_firestore_odm: ^1.0.0-dev.39
-  firebase_storage: ^11.0.4
   image_cropper: ^3.0.1
   fl_chart: ^0.55.2
   json_annotation: ^4.4.0
@@ -47,8 +46,8 @@ dependencies:
   flutter_native_splash: ^2.2.0+1
   shared_preferences: ^2.0.15
   after_layout: ^1.2.0
-  image_picker: ^0.8.6
   intl: ^0.17.0
+  tutorial_coach_mark: ^1.2.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
